--- a/WPFPasswordManager.csproj
+++ b/WPFPasswordManager.csproj
@@ -6,19 +6,26 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>icons\padlock.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="icons8-minus-90.png" />
     <None Remove="icons8-plus-64.png" />
     <None Remove="icons\icons8-i-64.png" />
+    <None Remove="icons\padlock.ico" />
     <None Remove="padlock.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="icons\padlock.ico" />
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="icons\icons8-i-64.png" />
     <Resource Include="icons\icons8-minus-90.png" />
     <Resource Include="icons\icons8-plus-64.png" />
+    <Resource Include="icons\padlock.ico" />
     <Resource Include="icons\padlock.png" />
   </ItemGroup>
 
